related, similar product issuesfix, logo, slogan dynamic, add and buy now visible on hover

--- a/src/components/products/ProductCard.css
+++ b/src/components/products/ProductCard.css
@@ -25,6 +25,22 @@
   opacity: 1;
 }
 
+.ProductCard-Wrapper:hover .CartAndBuyBtn {
+  display: block;
+}
+
+.CartAndBuyBtn {
+  display: none;
+}
+
+.ProductCard-Wrapper:hover .tempBtnHeight {
+  display: none;
+}
+
+.tempBtnHeight {
+  display: block;
+}
+
 @keyframes cartAnimation {
   0% {
     opacity: 0;
